layout issues

--- a/public/css/mywebsite.css
+++ b/public/css/mywebsite.css
@@ -33,6 +33,7 @@ form {
     display: inline-block;
     position: relative;
     padding: 50px 0;
+    width: 100%;
 }
 
 .heading {
@@ -56,10 +57,11 @@ form {
     /* border-bottom: 5px dotted rgb(0, 0, 0); */
     color: white;
     align-self: center;
-    padding: 10px 0;
+    padding: 10px 10px;
+    padding-bottom: 40px;
     height: auto;
-    margin-left: 20%;
-    width: 60%;
+    margin-left: 25%;
+    width: 50%;
     margin-top: 20px;
     border-bottom: 5px dotted white;
 }
@@ -68,7 +70,6 @@ form {
     margin: 30px;
     border: 2px solid white;
 }
-
 
 #contactMeIcons {
     background-color: #000;
@@ -82,10 +83,9 @@ form {
     width: 60%;
     display: flex;
     justify-content: space-around;
-    
+
     border-bottom: 5px dotted white;
 }
-
 
 /* Create three equal columns that floats next to each other */
 .column {
@@ -281,7 +281,6 @@ img {
     filter: grayscale(100%);
 }
 
-
 #myBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
@@ -330,7 +329,7 @@ img {
     text-align: center;
     padding: 15px;
     text-decoration: none;
-    font-size: 1.60em;
+    font-size: 1.6em;
 }
 
 #navbar a:hover {
@@ -349,4 +348,3 @@ img {
     text-align: center;
     font-size: 1em;
 }
-
